Prevent multi-select inputs overflowing
Some multi-select inputs (e.g. on the question search modal) were overflowing if too many values were selected.

--- a/src/scss/phy/forms.scss
+++ b/src/scss/phy/forms.scss
@@ -5,7 +5,7 @@
     box-shadow: 0 0 0 0.2rem $focus-blue;
   }
   .select__control, .select__control:hover {
-    height: 2.6rem;
+    min-height: 2.6rem;
     border: 1px solid $color-neutral-300;
     border-radius: $border-radius-lg;
 
